<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="194dp"
        android:layout_height="191dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/fitcalc_icon"
        app:srcCompat="@drawable/fitcalc" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/fitcalc"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/your_fitness_calculator"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBMI"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:foregroundGravity="center"
        android:includeFontPadding="true"
        android:text="@string/bmi"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnBMR"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:foregroundGravity="center"
        android:includeFontPadding="true"
        android:text="@string/bmr"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:foregroundGravity="center"
        android:includeFontPadding="true"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>